--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,8 @@
         <scala.binary.version>2.12</scala.binary.version>
         <maven.compiler.source>${target.java.version}</maven.compiler.source>
         <maven.compiler.target>${target.java.version}</maven.compiler.target>
-
-        <flink.version>1.20.1</flink.version>
-        <flink-connector-kafka.version>3.4.0-1.20</flink-connector-kafka.version>
-<!--        <flink.version>2.0.0</flink.version>-->
-<!--        <flink-connector-kafka.version>4.0.0-2.0</flink-connector-kafka.version>-->
+        <flink.version>2.0.0</flink.version>
+        <flink-connector-kafka.version>4.0.0-2.0</flink-connector-kafka.version>
         <log4j.version>2.24.1</log4j.version>
     </properties>
 
@@ -166,4 +163,27 @@
             </plugins>
         </pluginManagement>
     </build>
+    <profiles>
+        <profile>
+            <id>2.0</id>
+            <properties>
+                <flink.version>2.0.0</flink.version>
+                <flink-connector-kafka.version>4.0.0-2.0</flink-connector-kafka.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>1.20</id>
+            <properties>
+                <flink.version>1.20.1</flink.version>
+                <flink-connector-kafka.version>3.4.0-1.20</flink-connector-kafka.version>
+            </properties>
+        </profile>
+        <profile>
+            <id>1.19</id>
+            <properties>
+                <flink.version>1.19.2</flink.version>
+                <flink-connector-kafka.version>3.3.0-1.19</flink-connector-kafka.version>
+            </properties>
+        </profile>
+    </profiles>
 </project>
